<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="85dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
        app:layout_constraintTop_toBottomOf="@+id/txtViewLancamento"
        app:srcCompat="@drawable/filmeum" />

    <ImageView
        android:id="@+id/imageView4Capa"
        android:layout_width="417dp"
        android:layout_height="234dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/f9" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="37dp"
        android:layout_height="49dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewSeries"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guidelineEsquerda"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_ries"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toStartOf="@+id/textViewFilmes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <TextView
        android:id="@+id/textViewFilmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filmes"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSeries"
        app:layout_constraintEnd_toStartOf="@+id/textViewMinhalista"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewSeries"
        app:layout_constraintTop_toTopOf="@+id/textViewSeries" />

    <TextView
        android:id="@+id/textViewMinhalista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minha_lista"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFilmes"
        app:layout_constraintEnd_toEndOf="@id/guidelineDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewFilmes"
        app:layout_constraintTop_toTopOf="@+id/textViewFilmes" />

    <ImageView
        android:id="@+id/imageViewlogofilme"
        android:layout_width="242dp"
        android:layout_height="129dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/logoespelho" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25307798" />

    <TextView
        android:id="@+id/textViewEmpolgante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/romance"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDeus"
        app:layout_constraintEnd_toStartOf="@+id/textViewDeus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guidelineEsquerda"
        app:layout_constraintTop_toTopOf="@+id/textViewDeus"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewDeus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/com_dia"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewEsperanca"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewEmpolgante"
        app:layout_constraintTop_toTopOf="@+id/guidelineBottom" />

    <TextView
        android:id="@+id/textViewEsperanca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terror"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/textViewDeus"
        app:layout_constraintEnd_toEndOf="@id/guidelineDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewDeus"
        app:layout_constraintTop_toTopOf="@id/textViewDeus" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEsquerda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="369dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDireita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9002433" />

    <Button
        android:id="@+id/buttonAssistir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/baseline_play_arrow_24"
        android:text="Assistir"
        app:layout_constraintEnd_toStartOf="@+id/button2Detalhes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonMinhalista"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMinhalista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/baseline_add_24"
        android:padding="0dp"
        android:text="@string/minha_listamais"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAssistir"
        app:layout_constraintEnd_toStartOf="@+id/buttonAssistir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
        app:layout_constraintTop_toTopOf="@+id/buttonAssistir" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2Detalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/icinfo"
        android:padding="0dp"
        android:text="@string/detalhes"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAssistir"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAssistir"
        app:layout_constraintTop_toTopOf="@+id/buttonAssistir" />

    <TextView
        android:id="@+id/txtViewLancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/lan_amento"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintStart_toStartOf="@+id/guidelineEsquerda"
        app:layout_constraintTop_toBottomOf="@+id/buttonAssistir" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="97dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/filmetres" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="108dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/filmedois" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Amanda Balestreiro Ferreira"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>